task-7 / Implement interface to add a question